dbeaver/pro#3419 Don't read additional metadata in simple mode, fix completion position sync